it will have complete js with business and front logic, determining cost formula, object constructor, creates prototype to run function with if statments, add reset feature and text in results with cost.

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@ h2 {
   width: auto;
 }
 
+#mariopizza {
+  height: 300px;
+  width: auto;
+}
 body {
   background-color: pink;
   color: white;
@@ -54,4 +58,7 @@ body {
 #large {
   height: 300px;
   width: auto;
+}
+#show-price {
+  display: none;
 }
